@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

title Domain Model

class Organization {
    name
    vatNumber
    website
    phoneNumber
    email
}

class Team {
    currentSize
    maxSize
    minSize
    skills
}

class Skill{
    name
    }

class Collaborator {
    name
    email
    phone
    birthDate
    admissionDate
    address
    idDocType
    idNumber
}

class HumanResourceManager {
    name
    email
    phone
}

Organization "1" - "0..* " HumanResourceManager : has >
Organization "1" - "0..* " Team: owns >
HumanResourceManager "1" -- "0..1 " Team : defined by >
HumanResourceManager "1" -- "0..1 " Skill : assigns >
Team "1" -- "0..* " Collaborator : composed of >
Team "1" -- "0..* " Skill : has >
@enduml